Horizontal scrollbar fix

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -28,14 +28,9 @@
   font-display: swap;
 }
 
-
-#app {
-  width: 100%;
-  overflow-y: hidden;
-}
-
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 h1 {
